--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -2,12 +2,13 @@
 body{
     margin: 0;
     font-family:'Amatic SC';
-    background: -webkit-gradient(linear, left top, left bottom, from(#000000), to(#440857));
-    background: -moz-linear-gradient(top, #293333, #441650);
+    background: -webkit-gradient(linear, left top, left bottom, from(#f7ddad), to(#4b422f));
+    background: -moz-linear-gradient(top, #e7d08f, #441650);
     /* cursor: url(nat989.cur), default; */
     
 }
 .main-login{
+    text-decoration: none;
     width: 100vw;
     height: 100vh;
    /* background: black; */
@@ -17,6 +18,7 @@ body{
     
 }
 .left-login{
+    text-decoration: none;
     width: 50vw;
     height: 100vh;
     display: flex;
@@ -29,11 +31,20 @@ body{
 }
 .left-login > h1:hover{
     transition:.3s;
-    color: #ba00f3;
+    color: #5a4630;
+}
+.ins{
+    text-decoration: none;
+}
+.ins:hover{
+    text-decoration: none;
+    transition:.3s;
+    color: #ffffff;
 
 }
 
 .right-login{
+    text-decoration: none;
     width: 50vw;
     height: 100vh;
     display: flex;
@@ -60,7 +71,7 @@ body{
     box-shadow: 0px 10px 40px black;
 }
 .card-login > h1{
-    color:#9900ff;
+    color:#615227;
     font-weight: 800;
     margin: 0;
 }
@@ -122,7 +133,7 @@ body{
 }
 
 .img-login{
-    width: 40vw;
+    width: 20vw;
 
 }
 .a{
@@ -139,4 +150,8 @@ body{
     background:rgb(15, 255, 243);
     cursor:pointer ;
     cursor: url(hol38.cur), default;
+}
+ .lin{
+     color:black;
+    text-decoration: none;
 }
