--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -42,6 +42,9 @@ body{
     color: #ffffff;
 
 }
+.child >h2{
+    text-decoration: none;
+}
 
 .right-login{
     text-decoration: none;
@@ -154,4 +157,10 @@ body{
  .lin{
      color:black;
     text-decoration: none;
+}
+.container{
+    text-decoration: none;
+    border-radius: 0;
+    margin: 0;
+    display:flex;
 }
