--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -40,12 +40,14 @@ body{
     text-decoration: none;
     transition:.3s;
     color: #ffffff;
-
 }
-.child >h2{
+.container{
+    display: flex;
+}
+.child1 >h2{
     text-decoration: none;
-}
 
+}
 .right-login{
     text-decoration: none;
     width: 50vw;
@@ -158,9 +160,6 @@ body{
      color:black;
     text-decoration: none;
 }
-.container{
+h2{
     text-decoration: none;
-    border-radius: 0;
-    margin: 0;
-    display:flex;
 }
