--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -88,6 +88,10 @@ body{
     width:50%;
     margin-left: 20%
 }
+hr {
+	border: 0;
+	border-top: 1px solid #094CFA;
+}
 
 @media screen and (max-width: 800px)  {    
     .left-login H1{
