--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -90,7 +90,7 @@ body{
 }
 hr {
 	border: 0;
-	border-top: 1px solid #000000;
+	border-top: 1px solid #9e8769;
 }
 
 @media screen and (max-width: 800px)  {    
