--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -11,7 +11,10 @@ body {
     color: white;
 }
 
-#cabecalho {}
+#menu {
+    display: flex;
+    flex-wrap: wrap;
+}
 
 #titulo_1 {
     color: #4b422f;
@@ -166,10 +169,11 @@ body {
     }
     #redes_sociais.active #menu {
         display: flex;
-        flex-wrap: wrap;
+        flex-direction: column;
         text-decoration: none;
         color: rgb(255, 255, 255);
         margin-top: 1%;
+        
     }
 
     #tx_1 {
@@ -187,7 +191,8 @@ body {
     }
     #btn-mobile{
     display: block;
-    width: 60px;
+    width: 240px;
+    height: 30px;
     border-radius: 10px;
     background-color: #4b422f;
     color: aliceblue;
